--- a/style.css
+++ b/style.css
@@ -1,9 +1,31 @@
+#nav--h3:hover {
+  animation: horizontal-shaking 0.25s linear infinite;
+  color: green;
+}
 #play--area--body {
   /*Components needed for background animation*/
   background: linear-gradient(100deg, #0b5904, #138c08, #16a808, #1ac90a);
   height: 100vh;
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
+}
+/*Shake*/
+@keyframes horizontal-shaking {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(5px);
+  }
+  50% {
+    transform: translateX(-5px);
+  }
+  75% {
+    transform: translateX(5px);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
 
 /* Changes the gradient color according to position*/
@@ -17,4 +39,52 @@
   100% {
     background-position: 0% 50%;
   }
+}
+
+.hidden {
+  display: none;
+}
+/* .show-modal {
+  font-size: 2rem;
+  font-weight: 600;
+  padding: 1.75rem 3.5rem;
+  margin: 5rem 2rem;
+  border: none;
+  background-color: #fff;
+  color: #444;
+  border-radius: 10rem;
+  cursor: pointer;
+} */
+.close-modal {
+  position: absolute;
+  top: 1.2rem;
+  right: 2rem;
+  font-size: 5rem;
+  color: #333;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+
+  background-color: white;
+  padding: 6rem;
+  border-radius: 5px;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+  z-index: 10;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 5;
 }
